Improve API safety and decompose Variable.modifyState() (phase 3)
  - AugmentedProbTable: replace OutOfMemoryError with
    IllegalArgumentException for negative table size, preserving the
    original cause in the exception chain
  - ProbNet.moveNode(): add upfront validation that namesNode and
    newPositions have the same size, replacing a silent
    ArrayIndexOutOfBoundsException with a descriptive error
  - ProbNet.buildMarkovDecisionNetwork(): replace bare cast to
    TablePotential with instanceof pattern matching and a descriptive
    IllegalArgumentException
  - Node.absorbNodeConsistently(): replace bare cast of maximize()[0]
    with instanceof pattern matching and IllegalStateException
  - Variable.modifyState(): extract the five switch cases into private
    methods (addStateAt, removeStateAt, moveStateDown, moveStateUp,
    renameState); public signature unchanged